<resources>
    <string name="app_name">Tamazuj</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="file_number">File Number</string>
    <string name="gender">Gender</string>
    <string name="password2">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="age">Age</string>
    <string name="tamazuj">Tamazuj</string>
    <string name="skip">Skip</string>
    <string name="tamazuj_medical_consultation_app">Tamazuj Medical Consultation App</string>
    <string name="welcome">Welcome</string>
    <string name="choose_of_consultation">Choose of consultation</string>
    <string name="online_consultations">Online Consultations</string>
    <string name="in_clinic_consultation">In-clinic consultation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_advice">Ask Advice</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="rest_password">Rest Password</string>
    <string name="rate_your_experience">Rate your Experience</string>
    <string name="ok">OK</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">Tamazuj</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="edit">Edit</string>
    <string name="rate_your_app">Rate your App</string>
    <string name="consulting_field">Consulting field :</string>
    <string name="doctor_s_name">Doctor\'s name :</string>
    <string name="consultation_date">Consultation date :</string>
    <string name="type_of_counseling">Type of counseling:</string>
    <string name="the_amount_paid">The amount paid:</string>
    <string name="skip2">Skip</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="language">language</string>
    <string name="required">required</string>
    <string name="type_your_messages_here">Type a message</string>
    <string name="seen">Seen</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="a_sample_message">A sample message</string>
    <string name="location">Location</string>
    <string name="logout">LogOut</string>
    <string-array name="TimerChat">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
    </string-array>
    <string-array name="ChooseCommunication">
        <item>Email</item>
        <item>Mobile Number</item>
    </string-array>
    <string-array name="chooseInterview">
        <item>Chat</item>
    </string-array>
    <string-array name="choosePay">
        <item>PayPal</item>
        <item>Myfatoorah</item>
    </string-array>

</resources>