<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_rate"
            android:title="@string/rate" />
        <item
            android:id="@+id/nav_location"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_logOut"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>