<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.corsuevisionplus.tamazuj.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.corsuevisionplus.tamazuj.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.corsuevisionplus.tamazuj.fragments.RateFragment"
        android:label="@string/rate"
        tools:layout="@layout/fragment_rate" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.corsuevisionplus.tamazuj.fragments.MapTamazujFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_map_tamazuj" />

    <fragment
        android:id="@+id/nav_logOut"
        android:name="com.corsuevisionplus.tamazuj.fragments.LogOutFragment"
        android:label="LogOut"
        tools:layout="@layout/fragment_log_out"
         />
</navigation>