<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LogInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_login"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_logo"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/colored_background_text"/>
        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/colored_background_text"
            />
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/forgotpassword"
            android:backgroundTint="@color/white"
            android:paddingStart="18dp"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/LogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/log_in"
            android:backgroundTint="#95A1D5"
            android:paddingEnd="50dp"
            android:drawableEnd="@drawable/ic_pulse_line"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:backgroundTint="#95A1D5"
            android:paddingEnd="50dp"
            android:drawableEnd="@drawable/ic_pulse_line"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>

