<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.SignUpActivity">

        <ImageView
            android:id="@+id/photoProSet"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_logo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            >
            <EditText
                android:id="@+id/nameSet"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/colored_background_text"/>
            <EditText
                android:id="@+id/emailSet"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/colored_background_text"/>
            <EditText
                android:id="@+id/mobileNumSet"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/colored_background_text"/>
            <EditText
                android:id="@+id/lanSet"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="The language"
                android:inputType="text"
                android:paddingStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/colored_background_text"/>
            <EditText
                android:id="@+id/genderSet"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/gender"
                android:inputType="text"
                android:paddingStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/colored_background_text"/>
            <EditText
                android:id="@+id/ageSet"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/age"
                android:inputType="text"
                android:paddingStart="10dp"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:paddingEnd="7dp"
                android:background="@drawable/colored_background_text"/>

            <EditText
                android:id="@+id/passwordSet"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/colored_background_text"/>

        </LinearLayout>
        <Button
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="#95A1D5"
            android:paddingEnd="50dp"
            android:drawableEnd="@drawable/ic_pulse_line"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>

